# signal_respirometry

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/: GX010065_metadata.txt  GX010067_metadata.txt  salazar_format_update_rows_25_31.csv  stoddard_salazar_2011_table1.csv
notebooks/: 00_download_videos_from_dryad.ipynb  00_project_setup.ipynb  01_video_analysis_nov10.ipynb  01_video_analysis_nov11.ipynb  02_video_analysis_nov12.ipynb  02_video_analysis_nov13.ipynb  03_video_analysis_nov13.ipynb  03_video_analysis_nov14.ipynb  04_video_analysis_nov14.ipynb  05_all_videos_comparison.ipynb  06_arducam_video_analysis_nov12.ipynb  A_batch_respirometry_final.ipynb  A_convert_newbox_csv.ipynb  B_batch_respirometry.ipynb  B_batch_respirometry_final.ipynb  B_comparative_figure.ipynb  Figure 1 - BarChart.ipynb  Figure1BarChart.ipynb  Figure1_S1_BarChart.ipynb  Figure1_S3_SlopeGraph.ipynb  Figure1_SlopeGraph.ipynb  Figure2_S1_BarChart.ipynb  Figure2_S5_BarChart.ipynb  Figure2_SlopeGraph.ipynb  Figure3Regression.ipynb  Figure3_S3_S4_Regression.ipynb  Figure3_S4_S6_Regression.ipynb  Figure4_comparative.html  Figure4_comparative.ipynb  FigureS1DataTable.ipynb  FigureS1_Pilot.ipynb  FigureS2_AllVideosComparison.ipynb  FigureS3AllVideosComparison.ipynb  FigureS4_Pilot.ipynb  TableS1_DataTable.ipynb  all_trials_qc_background.ipynb  batch_respirometry.ipynb  comparetest.ipynb
scripts/: Niko_stat_script.R  analyze_streaks.py  consumption_rate.R  consumption_rate.R.BAK  convert_firesting_to_csv.py  convert_newbox_csv.py  define_rois.py  download_dryad_videos.py  (+3 more)
(+419 files in other folders)
